# beacon-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/sample/: horizon-products-faq.md  return-warranty-policy.md
src/beacon/: __init__.py  app.py  config.py
src/beacon/generation/: __init__.py  answerer.py
src/beacon/ingestion/: __init__.py  chunker.py  loader.py
src/beacon/retrieval/: __init__.py  embedder.py  store.py
